sumo/tests/netconvert/errors/large_coordinates/errors.netconvert
Warning: Network contains very large coordinates and will probably flicker in the GUI. Check for outlying nodes and make sure the network is shifted to the coordinate origin
Leaked object at 0x1bb2520 (size 16, 0x337beb0499)
Leaked object at 0x1bb2df0 (size 60, 0x337ca9c3c9)
Leaked object at 0x1bb2eb0 (size 62, 0x337ca9c3c9)
Leaked object at 0x1bb2f70 (size 55, 0x337ca9c3c9)
Leaked object at 0x1bb3020 (size 59, 0x337ca9c3c9)
Leaked object at 0x1bb30e0 (size 78, 0x337ca9c3c9)
Leaked object at 0x1bb31b0 (size 61, 0x337ca9c3c9)
Leaked object at 0x1bb3270 (size 26, 0x337ca9c3c9)
Leaked object at 0x1bb3310 (size 782, 0x337ca9c3c9)
*** 9 leaks found
delete: freed 0x1bb3310 (size 782, 417 bytes still allocated)
delete: freed 0x1bb3270 (size 26, 391 bytes still allocated)
delete: freed 0x1bb31b0 (size 61, 330 bytes still allocated)
delete: freed 0x1bb30e0 (size 78, 252 bytes still allocated)
delete: freed 0x1bb3020 (size 59, 193 bytes still allocated)
delete: freed 0x1bb2f70 (size 55, 138 bytes still allocated)
delete: freed 0x1bb2eb0 (size 62, 76 bytes still allocated)
delete: freed 0x1bb2df0 (size 60, 16 bytes still allocated)
delete: freed 0x1bb2520 (size 16, 0 bytes still allocated)
